[package]
name = "Rie"
version = "0.1.0"
authors = ["Emillia <hentaimasterpad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
toml = "0.5.6"
serde = "1.0.111"
typemap = "0.3.3"
diesel = "1.4.4"
chrono = "0.4.11"
rand = "0.7.3"
regex = "1.3.9"
