[package]
name = "Rie"
version = "0.2.0"
authors = ["Emillia (CFTheMaster/computerfreaker)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2"
serenity = "0.9"
toml = "0.5.6"
serde = "1.0.111"
typemap = "0.3.3"
diesel = { version = "1.4.4", features = ["postgres"] }
chrono = "0.4.11"
rand = "0.7.3"
regex = "1.3.9"
dotenv = "0.15.0"
serde_json = "1.0.57"
curl = "0.4.31"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.41"
tracing-core = "0.1.17"
clokwerk = "0.3.3"
futures = "0.3.7"