[package]
name = "Rie"
version = "0.3.0"
authors = ["Emillia (CFTheMaster/computerfreaker)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
serenity = "0.9"
toml = "0.5"
serde = "1.0"
typemap = "0.3"
diesel = { version = "1.4", features = ["postgres"] }
chrono = "0.4"
rand = "0.8"
regex = "1.4"
dotenv = "0.15"
serde_json = "1.0"
curl = "0.4"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
tracing-core = "0.1"
clokwerk = "0.3"
futures = "0.3"
sys-info = "0.7"
eventual = "0.1"